--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
     "prettier": "^3.3.3",
+    "supabase": "^1.223.10",
     "svelte": "^5.0.0-next.1",
     "svelte-check": "^4.0.0",
     "typescript": "^5.0.0",
